get window status bar height and setting.

--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -32,6 +32,12 @@
               "action.system.home"
             ]
           }
+        ],
+        "metadata": [
+          {
+            "name": "TestRealName",
+            "value": "Minooooo!"
+          }
         ]
       }
     ],
